# CocoroCore2

./: .gitignore  CLAUDE.md  CocoroCore2_テキストメモリスケジューラー実装計画.md  CocoroCore2概要.md  CocoroCore2設計書.md  MOS_MIGRATION_PLAN.md  MemOS_Advanced_Features_Analysis.md  MemOS統合知見.md  Phase1_テキストメモリスケジューラー統合基盤_設計書.md  Phase1_実装タスクサマリー.md  Phase1_実装詳細ガイド.md  Phase2_チャット処理スケジューラー連携実装計画.md  Phase2_実装タスクサマリー.md  Phase2_詳細設計書.md  Phase3_テキストメモリ最適化機能実装計画.md  Phase3_実装タスクサマリー.md  Phase3_詳細設計書.md  README.md  THIRDPARTY_LICENSES.md  build.bat  build_cocoro2.py  create_spec.py  pyproject.toml  requirements.txt  run.bat  test_system_prompt.py  test_unified_api_only.py  会話提案機能について.md
config/: CocoroSetting.json  MemosSetting.json  Neo4jSetting.json  cocoro_config.json  default_memos_config.json  development.json  memos_config.json
docs/: unified_api.md
memory_cubes/hirona_default/: config.json
neo4j/conf/: neo4j.conf
src/: app.py  config.py  core_app.py  log_handler.py  main.py  memos_wrapper.py  transformers_mock.py  truncating_formatter.py
src/api/: chat_handlers.py  endpoints.py  legacy_adapter.py  models.py  services.py
src/clients/: __init__.py  cocoro_dock_client.py
src/core/: neo4j_manager.py  optimization_scheduler.py  scheduler_config.py  session_manager.py  text_memory_scheduler.py  user_manager.py
src/image/: __init__.py  ai_initiative.py  context_detector.py  error_handlers.py  image_processor.py
tests/: test_config_basic.py  test_config_validation.py  test_dynamic_config.py  test_memcube_creation.py  test_memory_functionality.py  test_mos_integration.py  test_phase1_integration.py  test_phase2_chat_integration.py  test_phase2_helpers.py  test_phase2_manual.py  test_phase2_memory_integration.py  test_scheduler_config.py  test_simplified.py  test_text_memory_scheduler.py  test_tree_text_memory.py  test_user_direct_mapping.py  test_user_id_mapping.py
